# zendesk-cli

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: client.rs  config.rs  idref.rs  keychain.rs  main.rs  models.rs  output.rs
tests/: api_contract.rs  cli_offline.rs
tests/common/: mod.rs
